Update styles for globe. Fix drop-down menu alignment.

--- a/css/tethys_main.css
+++ b/css/tethys_main.css
@@ -81,11 +81,11 @@
 }
 
 .header-dropdown-menu.community {
-    right: 44px;
+    right: 93px;
 }
 
 .header-dropdown-menu.getting-started {
-    right: 376px;
+    right: 426px;
     width: 148px;
 }
 
@@ -629,7 +629,7 @@ a:hover {
 .mobile-nav-button {
   display: none;
 }
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   .site-header {
     margin: 0 20px;
   }
@@ -716,8 +716,7 @@ a:hover {
 }
 .float-image {
   position: fixed;
-  left: -100px;
-  top: 168px;
+  left: 100px;
   width: 900px;
   max-width: none;
 }
@@ -741,28 +740,44 @@ a:hover {
   color: white;
   text-decoration: none;
 }
+
+@media (max-width: 1600px) {
+  .float-image {
+    left: 0;
+  }
+}
+
+@media (max-width: 1400px) {
+  .float-image {
+    left: -50px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .float-image {
+    top: 50px;
+    left: -100px;
+    width: 800px;
+  }
+
+  .hero-message {
+    right: 100px;
+  }
+}
+
+@media (max-width: 1115px) {
+  .hero-message {
+    right: 50px;
+  }
+}
+
 @media (max-width: 1050px) {
   .float-image {
-    top: 200px;
-    left: -100px;
-    width: 750px;
-  }
-}
-@media (max-width: 930px) {
-  .float-image {
     width: 700px;
-    top: 200px;
-    left: -120px;
+    top: 100px;
   }
 }
-@media (max-width: 810px) {
-  .float-image {
-    width: 600px;
-    top: 200px;
-    left: -140px;
-  }
-}
-@media (max-width: 700px) {
+@media (max-width: 985px) {
   .float-image {
     display: none;
   }
@@ -772,11 +787,22 @@ a:hover {
   }
   .hero-message {
     position: static;
-    padding: 60px 40px;
+    width: 600px;
+    padding: 60px 0;
+    margin: auto;
   }
+
   .hero-message h2 {
     white-space: normal;
   }
+
+}
+
+@media (max-width: 700px) {
+    .hero-message {
+        width: 100%;
+        padding: 60px 80px;
+    }
 }
 /* ===========================================
    Blurb Secton
@@ -1676,7 +1702,7 @@ footer.site-footer {
   padding-right: 10%;
   margin-bottom: -65px;
 }
-@media (max-width: 992px) {
+@media (max-width: 1050px) {
   .site-header .header-logo .logo-title a {
     display: none;
   }
@@ -1775,7 +1801,7 @@ footer.site-footer {
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   .site-header .header-logo .logo-title a {
     display: none;
   }
